--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <section id="work">
             <h2>My Work</h2>
             <div class="gallery">
-                <img src="path/to/your/image1.jpg" alt="Description of Photo 1">
+                <img src="Untitled-15.jpg" alt="Dzoke from The Pot">
                 </div>
         </section>
 
