--- a/index.html
+++ b/index.html
@@ -3,113 +3,327 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vaso | Photography Portfolio</title>
+    <title>vasosofuji | Photography Portfolio</title>
     <style>
-        /* Basic Styling for Readability */
-        body {
-            font-family: Arial, sans-serif;
+        /* --- CSS VARIABLES & RESET --- */
+        :root {
+            --bg-color: #0b0b0b;       /* Very dark grey/almost black */
+            --card-bg: #161616;        /* Slightly lighter for cards */
+            --text-main: #e0e0e0;      /* Off-white for readability */
+            --text-muted: #a0a0a0;     /* Grey for secondary text */
+            --accent: #64ffda;         /* Mint Green */
+            --font-main: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        }
+
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            box-sizing: border-box;
+        }
+
+        html {
+            scroll-behavior: smooth;
+        }
+
+        body {
+            background-color: var(--bg-color);
+            color: var(--text-main);
+            font-family: var(--font-main);
             line-height: 1.6;
         }
 
-        header {
-            background-color: #333;
-            color: white;
-            padding: 1em 0;
-            text-align: center;
-        }
-
-        nav a {
-            color: white;
-            margin: 0 15px;
+        a {
             text-decoration: none;
-            font-weight: bold;
+            color: inherit;
+            transition: color 0.3s ease;
         }
 
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-            padding: 20px 0;
+        ul {
+            list-style: none;
         }
 
-        section {
-            padding: 20px;
-            margin-bottom: 20px;
-            background: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h2 {
-            text-align: center;
-            color: #555;
-            margin-bottom: 30px;
-        }
-
-        .gallery {
+        /* --- NAVIGATION --- */
+        nav {
             display: flex;
-            flex-wrap: wrap;
-            gap: 15px;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 5%;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            background-color: rgba(11, 11, 11, 0.95);
+            backdrop-filter: blur(5px);
+            z-index: 1000;
+            border-bottom: 1px solid #222;
+        }
+
+        .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+            letter-spacing: 2px;
+            color: var(--accent);
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 30px;
+        }
+
+        .nav-links a {
+            font-size: 0.9rem;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .nav-links a:hover {
+            color: var(--accent);
+        }
+
+        /* --- HERO SECTION --- */
+        header {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
             justify-content: center;
-        }
-
-        .gallery img {
-            width: 300px; /* Adjust size as needed */
-            height: 200px;
-            object-fit: cover;
-            border: 1px solid #ccc;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s;
-        }
-
-        .gallery img:hover {
-            transform: scale(1.05);
-        }
-
-        .contact-info p {
+            align-items: center;
             text-align: center;
-            font-size: 1.1em;
+            padding: 0 20px;
+        }
+
+        .hero-subtitle {
+            color: var(--accent);
+            font-size: 1.2rem;
+            margin-bottom: 10px;
+            text-transform: uppercase;
+            letter-spacing: 3px;
+        }
+
+        h1 {
+            font-size: 4rem;
+            margin-bottom: 20px;
+            line-height: 1.1;
+        }
+
+        .hero-desc {
+            max-width: 600px;
+            color: var(--text-muted);
+            margin-bottom: 40px;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 12px 30px;
+            border: 1px solid var(--accent);
+            color: var(--accent);
+            border-radius: 4px;
+            text-transform: uppercase;
+            font-size: 0.8rem;
+            letter-spacing: 1px;
+            transition: all 0.3s ease;
+            background: transparent;
+            cursor: pointer;
+        }
+
+        .btn:hover {
+            background-color: rgba(100, 255, 218, 0.1);
+            transform: translateY(-3px);
+        }
+
+        /* --- SECTIONS GENERAL --- */
+        section {
+            padding: 80px 5%;
+        }
+
+        .section-title {
+            font-size: 2rem;
+            margin-bottom: 40px;
+            border-left: 3px solid var(--accent);
+            padding-left: 20px;
+            display: inline-block;
+        }
+
+        /* --- GALLERY GRID --- */
+        .gallery-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+        }
+
+        .photo-card {
+            background-color: var(--card-bg);
+            height: 400px; /* Fixed height for uniformity */
+            overflow: hidden;
+            position: relative;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .photo-card img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.5s ease;
+            opacity: 0.8;
+        }
+
+        .photo-card:hover img {
+            transform: scale(1.05);
+            opacity: 1;
+        }
+
+        /* Overlay for image details (optional) */
+        .overlay {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            padding: 20px;
+            background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .photo-card:hover .overlay {
+            opacity: 1;
+        }
+
+        /* --- CONTACT SECTION --- */
+        .contact-container {
+            max-width: 600px;
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            margin-top: 30px;
+        }
+
+        input, textarea {
+            width: 100%;
+            padding: 15px;
+            background-color: var(--card-bg);
+            border: 1px solid #333;
+            color: var(--text-main);
+            border-radius: 4px;
+            font-family: inherit;
+        }
+
+        input:focus, textarea:focus {
+            outline: none;
+            border-color: var(--accent);
+        }
+
+        /* --- FOOTER --- */
+        footer {
+            text-align: center;
+            padding: 40px;
+            border-top: 1px solid #222;
+            color: var(--text-muted);
+            font-size: 0.9rem;
+        }
+
+        /* --- RESPONSIVE --- */
+        @media (max-width: 768px) {
+            h1 { font-size: 2.5rem; }
+            
+            nav {
+                flex-direction: column;
+                gap: 15px;
+                padding: 15px;
+            }
+
+            .nav-links {
+                gap: 15px;
+                font-size: 0.8rem;
+            }
         }
     </style>
 </head>
 <body>
 
-    <header>
-        <h1>My Photography</h1>
-        <nav>
-            <a href="#work">Portfolio</a>
+    <nav>
+        <a href="#" class="logo">vasosofuji</a>
+        <div class="nav-links">
+            <a href="#portraits">Portraits</a>
+            <a href="#concerts">Concerts</a>
+            <a href="#landscapes">Landscapes</a>
             <a href="#contact">Contact</a>
-        </nav>
+        </div>
+    </nav>
+
+    <header>
+        <span class="hero-subtitle">Photography by</span>
+        <h1>Mateja Vasojevikj</h1>
+        <p class="hero-desc">
+            Capturing the raw energy of concerts, the depth of portraits, and the silence of landscapes.
+        </p>
+        <a href="#contact" class="btn">Get in Touch</a>
     </header>
 
-    <div class="container">
-
-        <section id="work">
-            <h2>My Work</h2>
-            <div class="gallery">
-                <img src="Untitled-15.jpg" alt="Dzoke from The Pot">
-                </div>
-        </section>
-
-        ---
-
-        <section id="contact">
-            <h2>Get in Touch</h2>
-            <div class="contact-info">
-                <p><strong>Email:</strong> mateja2006.mv@gmail.com</p>
-                <p><strong>Instagram:</strong> <a href="https://instagram.com/vasosofuji" target="_blank">@vasosofuji</a></p>
-                <p>Skopje, North Macedonia</p>
-                <p>Feel free to reach out for commissions, prints, or collaborations!</p>
+    <section id="portraits">
+        <h2 class="section-title">Portraits</h2>
+        <div class="gallery-grid">
+            <div class="photo-card">
+                <img src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?q=80&w=1000&auto=format&fit=crop" alt="Portrait 1">
             </div>
-        </section>
+            <div class="photo-card">
+                <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=1000&auto=format&fit=crop" alt="Portrait 2">
+            </div>
+            <div class="photo-card">
+                <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?q=80&w=1000&auto=format&fit=crop" alt="Portrait 3">
+            </div>
+        </div>
+    </section>
 
-    </div>
+    <section id="concerts">
+        <h2 class="section-title">Concerts</h2>
+        <div class="gallery-grid">
+            <div class="photo-card">
+                <img src="https://images.unsplash.com/photo-1459749411177-047381bb9085?q=80&w=1000&auto=format&fit=crop" alt="Concert 1">
+            </div>
+            <div class="photo-card">
+                <img src="https://images.unsplash.com/photo-1501386761578-eac5c94b800a?q=80&w=1000&auto=format&fit=crop" alt="Concert 2">
+            </div>
+            <div class="photo-card">
+                <img src="https://images.unsplash.com/photo-1533174072545-e8d4aa97edf9?q=80&w=1000&auto=format&fit=crop" alt="Concert 3">
+            </div>
+        </div>
+    </section>
+
+    <section id="landscapes">
+        <h2 class="section-title">Landscapes</h2>
+        <div class="gallery-grid">
+            <div class="photo-card">
+                <img src="https://images.unsplash.com/photo-1472214103451-9374bd1c798e?q=80&w=1000&auto=format&fit=crop" alt="Landscape 1">
+            </div>
+            <div class="photo-card">
+                <img src="https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?q=80&w=1000&auto=format&fit=crop" alt="Landscape 2">
+            </div>
+            <div class="photo-card">
+                <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?q=80&w=1000&auto=format&fit=crop" alt="Landscape 3">
+            </div>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="contact-container">
+            <h2 class="section-title">Contact Me</h2>
+            <p style="color: var(--text-muted)">Interested in working together? Send me a message.</p>
+            
+            <form action="mailto:mateja2006.mv@gmail.com" method="post" enctype="text/plain">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" rows="5" placeholder="Message" required></textarea>
+                <button type="submit" class="btn">Send Message</button>
+            </form>
+        </div>
+    </section>
 
     <footer>
-        <p style="text-align: center; padding: 10px; background-color: #333; color: white; font-size: 0.8em;">&copy; 2025 Vasosofuji</p>
+        <p>&copy; 2025 Mateja Vasojevikj (vasosofuji). All rights reserved.</p>
     </footer>
 
 </body>
