--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <span class="hero-subtitle">Photography by</span>
         <h1>Mateja Vasojevikj</h1>
         <p class="hero-desc">
-            Capturing the raw energy of concerts, the depth of portraits, and the silence of landscapes.
+            Capturing life through my Fujifilm XT-2
         </p>
         <a href="#contact" class="btn">Get in Touch</a>
     </header>
@@ -267,13 +267,13 @@
         <h2 class="section-title">Portraits</h2>
         <div class="gallery-grid">
             <div class="photo-card">
-                <img src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?q=80&w=1000&auto=format&fit=crop" alt="Portrait 1">
+                <img src="photos/portraits/DSCF4825.JPG" alt="Portrait 1">
             </div>
             <div class="photo-card">
-                <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=1000&auto=format&fit=crop" alt="Portrait 2">
+                <img src="photos/portraits/DSCF4830.JPG" alt="Portrait 2">
             </div>
             <div class="photo-card">
-                <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?q=80&w=1000&auto=format&fit=crop" alt="Portrait 3">
+                <img src="photos/portraits/DSCF4828.JPG" alt="Portrait 3">
             </div>
         </div>
     </section>
