--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         .photo-card {
             background-color: var(--card-bg);
-            height: 400px; /* Fixed height for uniformity */
+            height: 1080px; /* Fixed height for uniformity */
             overflow: hidden;
             position: relative;
             border-radius: 4px;
@@ -297,7 +297,7 @@
         <h2 class="section-title">Landscapes</h2>
         <div class="gallery-grid">
             <div class="photo-card">
-                <img src="https://images.unsplash.com/photo-1472214103451-9374bd1c798e?q=80&w=1000&auto=format&fit=crop" alt="Landscape 1">
+                <img src="https://www.flickr.com/photos/201695063@N02/54266587090/in/dateposted-public/" alt="Landscape 1">
             </div>
             <div class="photo-card">
                 <img src="https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?q=80&w=1000&auto=format&fit=crop" alt="Landscape 2">
