--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         .photo-card {
             background-color: var(--card-bg);
-            height: 1080px; /* Fixed height for uniformity */
+            height: 540px; /* Fixed height for uniformity */
             overflow: hidden;
             position: relative;
             border-radius: 4px;
@@ -311,7 +311,7 @@
     <section id="contact">
         <div class="contact-container">
             <h2 class="section-title">Contact Me</h2>
-            <p style="color: var(--text-muted)">Interested in working together? Send me a message.</p>
+            <p style="color: var(--text-muted)">Send me a message.</p>
             
             <form action="mailto:mateja2006.mv@gmail.com" method="post" enctype="text/plain">
                 <input type="text" name="name" placeholder="Your Name" required>
