--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         .photo-card {
             background-color: var(--card-bg);
-            height: 540px; /* Fixed height for uniformity */
+            height: 500px; /* Fixed height for uniformity */
             overflow: hidden;
             position: relative;
             border-radius: 4px;
@@ -267,10 +267,10 @@
         <h2 class="section-title">Portraits</h2>
         <div class="gallery-grid">
             <div class="photo-card">
-                <img src="photos/portraits/DSCF4825.JPG" alt="Portrait 1">
+                <img src="photos/portraits/DSCF4825.JPG" alt="Ivan">
             </div>
             <div class="photo-card">
-                <img src="photos/portraits/DSCF4830.JPG" alt="Portrait 2">
+                <img src="photos/portraits/DSCF4830.JPG" alt="Ivan and Nikola">
             </div>
             <div class="photo-card">
                 <img src="photos/portraits/DSCF4828.JPG" alt="Portrait 3">
