--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
 
         .photo-card {
             background-color: var(--card-bg);
-            height: 500px; /* Fixed height for uniformity */
+            width: 400px;
+            height: 600px; /* Fixed height for uniformity */
             overflow: hidden;
             position: relative;
             border-radius: 4px;
