--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img src="photos/portraits/DSCF4825.JPG" alt="Ivan">
             </div>
             <div class="photo-card">
-                <img src="photos/portraits/DSCF4830.JPG" alt="Ivan and Nikola">
+                <img src="photos/portraits/DSCF4830.jpg" alt="Ivan and Nikola">
             </div>
             <div class="photo-card">
                 <img src="photos/portraits/DSCF4828.JPG" alt="Portrait 3">
