--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <div class="photo-card">
                 <img src="photos/portraits/DSCF4828.JPG" alt="Portrait 3">
             </div>
+            <div class="photo-card">
+                <img src="photos/portraits/DSCF4825.JPG" alt="Ivan">
+            </div>
         </div>
     </section>
 
