--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
             <div class="photo-card">
                 <img src="photos/portraits/DSCF4828.JPG" alt="Portrait 3">
             </div>
-            <div class="photo-card">
-                <img src="photos/portraits/DSCF4825.JPG" alt="Ivan">
-            </div>
         </div>
     </section>
 
@@ -49,13 +46,13 @@
         <h2 class="section-title">Concerts</h2>
         <div class="gallery-grid">
             <div class="photo-card">
-                <img src="https://images.unsplash.com/photo-1459749411177-047381bb9085?q=80&w=1000&auto=format&fit=crop" alt="Concert 1">
+                <img src="photos/concerts/Untitled-13.jpg" alt="Iva from Sunneater">
             </div>
             <div class="photo-card">
-                <img src="https://images.unsplash.com/photo-1501386761578-eac5c94b800a?q=80&w=1000&auto=format&fit=crop" alt="Concert 2">
+                <img src="photos/concerts/Untitled-15.jpg" alt="Dzoke from The Pot">
             </div>
             <div class="photo-card">
-                <img src="https://images.unsplash.com/photo-1533174072545-e8d4aa97edf9?q=80&w=1000&auto=format&fit=crop" alt="Concert 3">
+                <img src="photos/concerts/kork.jpg" alt="Anastasija from Korka">
             </div>
         </div>
     </section>
