--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#concerts">Concerts</a>
             <a href="#landscapes">Landscapes</a>
             <a href="#contact">Contact</a>
-            <a href="https://instagram.com/vasosofuji"><img src="photos/portraits/DSCF4830.jpg"></a>
+            <a href="https://instagram.com/vasosofuji"><img src="photos/portraits/DSCF4830.jpg" width="50" height="50"></a>
         </div>
     </nav>
 
