--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#concerts">Concerts</a>
             <a href="#landscapes">Landscapes</a>
             <a href="#contact">Contact</a>
-            <a href="https://instagram.com/vasosofuji"><img src="misc/instalogo.png" width="25" height="25"></a>
+            <a href="https://instagram.com/vasosofuji"><img src="misc/instalogo.png"></a>
         </div>
     </nav>
 
@@ -28,6 +28,17 @@
         <a href="#contact" class="btn">Get in Touch</a>
     </header>
 
+    <section id="about">
+        <h2 class="section-title">About Me</h2>
+        <div class="about-content">
+            <p>I'm Mateja Vasojevikj, also known as **vasosofuji**. I'm a photographer based in Skopje, North Macedonia, that focuses on capturing raw emotions.</p>
+            <p>I shoot with a **Fujifilm X-T2** and also have a **National PE-145** flash from the 1970's.</p>
+            <p>Some of my artist collaborations include: Vladimir Chetkar, Noviot Pochetok, Marigold Box (Italy), Epidemik (RS), Ana && Stefan Petanovski, Golemata Voda, Fiction and many more</p>
+            <p>Organisations I have worked with include: Zdravo Mladi, Zemjotres, Underfest, Tributefest, Sepak Se Vrti, Stanica26, Marakana, Laboratorium, Enterprise Music School, Kotur, MKC and more</p>
+            <p style="margin-top: 20px;">*The camera I use is the Fujifilm XT-2*</p>
+        </div>
+    </section>
+    
     <section id="portraits">
         <h2 class="section-title">Portraits</h2>
         <div class="gallery-grid">
