--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
     <section id="about">
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
-            <p>I'm Mateja Vasojevikj, also known as **vasosofuji**. I'm a photographer based in Skopje, North Macedonia, that focuses on capturing raw emotions.</p>
-            <p>I shoot with a **Fujifilm X-T2** and also have a **National PE-145** flash from the 1970's.</p>
-            <p>Some of my artist collaborations include: Vladimir Chetkar, Noviot Pochetok, Marigold Box (Italy), Epidemik (RS), Ana && Stefan Petanovski, Golemata Voda, Fiction and many more</p>
-            <p>Organisations I have worked with include: Zdravo Mladi, Zemjotres, Underfest, Tributefest, Sepak Se Vrti, Stanica26, Marakana, Laboratorium, Enterprise Music School, Kotur, MKC and more</p>
-            <p style="margin-top: 20px;">*The camera I use is the Fujifilm XT-2*</p>
+            <p>I'm Mateja Vasojevikj, also known as <b>vasosofuji</b>. I'm a photographer based in Skopje, North Macedonia, that focuses on capturing raw emotions.</p>
+            <p>I shoot portraits, concerts and various corporate events. Because of my love for music the events I photograph the most are concerts and festivals, but I bring uniqueness to portraits as well.</p>
+            <p></p>
+            <p><b>Some of my artist collaborations include:</b> Vladimir Chetkar, Noviot Pochetok, Marigold Box (Italy), Epidemik (RS), Ana && Stefan Petanovski, Golemata Voda, Fiction and many more</p>
+            <p><b>Organisations I have worked with include:</b> Zdravo Mladi, Zemjotres, Underfest, Tributefest, Sepak Se Vrti, Stanica26, Marakana, Laboratorium, Enterprise Music School, Kotur, MKC and more</p>
+            <p>I shoot with a <b>Fujifilm X-T2</b> and also have a <b>National PE-145</b> flash from the 1970's.</p>
         </div>
     </section>
     
