--- a/index.html
+++ b/index.html
@@ -36,10 +36,13 @@
     <section id="about">
         <h2 class="section-title">About Me</h2>
         <div class="about-content about-layout">
-            <div class="about-text">
+           <div class="about-details">
+			   <h3>Who am I</h3>
+			<div class="about-text">
                 <p>I'm Mateja Vasojevikj, also known as <b>vasosofuji</b>. I'm a photographer based in Skopje, North Macedonia, that focuses on capturing raw emotions.</p>
                 <p>I shoot portraits, concerts and various corporate events. Because of my love for music the events I photograph the most are concerts and festivals, but I bring uniqueness to portraits as well.</p>
             </div>
+		   </div>
             <div class="about-details">
                 <h3>Collaborations & Gear</h3>
                 <ul class="collaboration-list">
