--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 	</div>
     </section>
     
-    <section id="calendar">
+    <section id="availability">
 	<div class="contact-container">
         <h2 class="section-title">My Availability</h2>
 	</div>
