--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#portraits" class="nav-item">Portraits</a>
             <a href="#concerts" class="nav-item">Concerts</a>
             <a href="#landscapes" class="nav-item">Landscapes</a>
-            <a href="#calendar" class="nav-item">Availability</a> 
+            <a href="#availability" class="nav-item">Availability</a> 
             <a href="#contact" class="nav-item">Contact</a>
             <a href="https://instagram.com/vasosofuji" class="social-link"><img src="misc/instalogo.png"></a> 
 	    <a href="https://www.linkedin.com/in/mateja-vasojevikj-907555290/" class="social-link"><img src="misc/linkedin.png"></a>
