--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="dot"></div>
                     <div class="dot"></div>
                 </div>
-                <img src="photos/portraits/DSCF4825.JPG" alt="Ivan">
+                <img src="photos/portraits/DSCF4825.jpg" alt="Ivan">
             </div>
             <div class="photo-card">
                 <div class="loader">
@@ -76,7 +76,7 @@
                     <div class="dot"></div>
                     <div class="dot"></div>
                 </div>
-                <img src="photos/portraits/DSCF4828.JPG" alt="Portrait 3">
+                <img src="photos/portraits/DSCF4828.jpg" alt="Portrait 3">
             </div>
         </div>
     </section>
@@ -136,7 +136,7 @@
                     <div class="dot"></div>
                     <div class="dot"></div>
                 </div>
-                <img src="photos/landscapes/blurryasfuck.JPG" alt="Landscape 3">
+                <img src="photos/landscapes/blurryasfuck.jpg" alt="Landscape 3">
             </div>
 	    <div class="photo-card landscape">
                 <div class="loader">
