--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+    <div id="global-preloader">
+        <div class="loader">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+        </div>
+    </div>
     <nav>
         <a href="#" class="logo">vasosofuji</a>
         <div class="nav-links">
@@ -55,27 +62,12 @@
         <h2 class="section-title">Portraits</h2>
         <div class="gallery-grid">
             <div class="photo-card">
-                <div class="loader">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
                 <img src="photos/portraits/DSCF4825.jpg" alt="Ivan">
             </div>
             <div class="photo-card">
-                <div class="loader">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
                 <img src="photos/portraits/DSCF4830.jpg" alt="Ivan and Nikola">
             </div>
             <div class="photo-card">
-                <div class="loader">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
                 <img src="photos/portraits/DSCF4828.jpg" alt="Portrait 3">
             </div>
         </div>
@@ -85,27 +77,12 @@
         <h2 class="section-title">Concerts</h2>
         <div class="gallery-grid">
             <div class="photo-card">
-                <div class="loader">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
                 <img src="photos/concerts/Untitled-13.jpg" alt="Iva from Sunneater">
             </div>
             <div class="photo-card">
-                <div class="loader">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
                 <img src="photos/concerts/Untitled-15.jpg" alt="Dzoke from The Pot">
             </div>
             <div class="photo-card">
-                <div class="loader">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
                 <img src="photos/concerts/kork.jpg" alt="Anastasija from Korka">
             </div>
         </div>
@@ -115,51 +92,21 @@
         <h2 class="section-title">Landscapes</h2>
         <div class="gallery-grid">
             <div class="photo-card landscape">
-                <div class="loader">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
                 <img src="photos/landscapes/IMG_8659.jpg" alt="Landscape 1"> 
             </div>
             <div class="photo-card landscape">
-                <div class="loader">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
                 <img src="photos/landscapes/IMG_8679.jpg" alt="Landscape 2">
             </div>
             <div class="photo-card landscape">
-                <div class="loader">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
                 <img src="photos/landscapes/blurryasfuck.jpg" alt="Landscape 3">
             </div>
 	    <div class="photo-card landscape">
-                <div class="loader">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
                 <img src="photos/landscapes/IMG_88967.jpg" alt="Landscape 4">
             </div>
 	    <div class="photo-card landscape">
-                <div class="loader">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
                 <img src="photos/landscapes/IMG_8896.jpg" alt="Landscape 5">
             </div>
 	    <div class="photo-card landscape">
-                <div class="loader">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
                 <img src="photos/landscapes/IMG_8635.jpg" alt="Landscape 6">
         
 	</div>
