--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content about-layout">
             <div class="about-text">
-                <p>I'm Mateja Vasojevikj, also known as <b>vasosofuji</b>. I'm a photographer based in Skopje, North Macedonia, that focuses on capturing raw emotions.</p>
-                <p>I shoot portraits, concerts and various corporate events. Because of my love for music the events I photograph the most are concerts and festivals, but I bring uniqueness to portraits as well.</p>
+				<h3>Who am I</h3>
+                <p>I'm Mateja Vasojevikj, also known as <b>vasosofuji</b>, a 19 year old Cybersecurity Student at Faculty of Computer Science and Engineering at "Sts. Cyril and Methodius" University.</p>
+                <p>On top of being a student, I'm also a freelance photographer and cinematographer based in <b>Skopje, North Macedonia</b>.</p>
+				<p>I shoot Portraits, Landscapes and Events, but my primary focus is Concert Photography (because of my love for music).</p>
+				<p>If you enjoy any of my work, feel free to<a href="#contact">contact me!</a></p>
             </div>
             <div class="about-details">
                 <h3>Collaborations & Gear</h3>
@@ -62,13 +65,13 @@
         <h2 class="section-title">Portraits</h2>
         <div class="gallery-grid">
             <div class="photo-card">
-                <img src="photos/portraits/DSCF4825.jpg" alt="Ivan">
+                <img src="photos/portraits/IMG_9801.jpg" alt="Nikola and Ana">
             </div>
             <div class="photo-card">
                 <img src="photos/portraits/DSCF4830.jpg" alt="Ivan and Nikola">
             </div>
             <div class="photo-card">
-                <img src="photos/portraits/DSCF4828.jpg" alt="Portrait 3">
+                <img src="photos/portraits/DSCF9828.jpg" alt="Ana">
             </div>
         </div>
     </section>
