--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content about-layout">
             <div class="about-text">
-				<h3>Who am I</h3>
+				<h3><b>>Who am I</b></h3>
                 <p>I'm Mateja Vasojevikj, also known as <b>vasosofuji</b>, a 19 year old Cybersecurity Student at Faculty of Computer Science and Engineering at "Sts. Cyril and Methodius" University.</p>
                 <p>On top of being a student, I'm also a freelance photographer and cinematographer based in <b>Skopje, North Macedonia</b>.</p>
 				<p>I shoot Portraits, Landscapes and Events, but my primary focus is Concert Photography (because of my love for music).</p>
-				<p>If you enjoy any of my work, feel free to<a href="#contact">contact me!</a></p>
+				<p>If you enjoy any of my work, feel free to <a href="#contact"><b>contact me!</b></a></p>
             </div>
             <div class="about-details">
                 <h3>Collaborations & Gear</h3>
@@ -71,7 +71,7 @@
                 <img src="photos/portraits/DSCF4830.jpg" alt="Ivan and Nikola">
             </div>
             <div class="photo-card">
-                <img src="photos/portraits/DSCF9828.jpg" alt="Ana">
+                <img src="photos/portraits/IMG_9828.jpg" alt="Ana">
             </div>
         </div>
     </section>
