--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
     <section id="about">
         <h2 class="section-title">About Me</h2>
         <div class="about-content about-layout">
-            <div class="about-text">
-				<h3><b>>Who am I</b></h3>
+            <div class="about-details">
+			<h3>Who am I</h3>
+			</div>
+				<div class="about-text">
                 <p>I'm Mateja Vasojevikj, also known as <b>vasosofuji</b>, a 19 year old Cybersecurity Student at Faculty of Computer Science and Engineering at "Sts. Cyril and Methodius" University.</p>
                 <p>On top of being a student, I'm also a freelance photographer and cinematographer based in <b>Skopje, North Macedonia</b>.</p>
 				<p>I shoot Portraits, Landscapes and Events, but my primary focus is Concert Photography (because of my love for music).</p>
