--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         <div class="about-content about-layout">
             <div class="about-details">
 			<h3>Who am I</h3>
-			</div>
 				<div class="about-text">
                 <p>I'm Mateja Vasojevikj, also known as <b>vasosofuji</b>, a 19 year old Cybersecurity Student at Faculty of Computer Science and Engineering at "Sts. Cyril and Methodius" University.</p>
                 <p>On top of being a student, I'm also a freelance photographer and cinematographer based in <b>Skopje, North Macedonia</b>.</p>
 				<p>I shoot Portraits, Landscapes and Events, but my primary focus is Concert Photography (because of my love for music).</p>
-				<p>If you enjoy any of my work, feel free to <a href="#contact"><b>contact me!</b></a></p>
-            </div>
+				<p>If you enjoy any of my work, feel free to <a href="#contact"><b>contact me</b></a> or message me on <a href="https://instagram.com/vasosofuji"><b>instagram!</b></a></p>
+				</div>
+				</div>
             <div class="about-details">
                 <h3>Collaborations & Gear</h3>
                 <ul class="collaboration-list">
