--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="#portraits" class="nav-item">Portraits</a>
             <a href="#concerts" class="nav-item">Concerts</a>
             <a href="#landscapes" class="nav-item">Landscapes</a>
+	    <a href="#videos" class="nav-item">Videos</a>
             <a href="#calendar" class="nav-item">Availability</a> 
             <a href="#contact" class="nav-item">Contact</a>
             <a href="https://instagram.com/vasosofuji" class="social-link"><img src="misc/instalogo.png"></a> 
@@ -97,12 +98,6 @@
         <h2 class="section-title">Landscapes</h2>
         <div class="gallery-grid">
             <div class="photo-card landscape">
-                <img src="photos/landscapes/IMG_8659.jpg" alt="Landscape 1"> 
-            </div>
-            <div class="photo-card landscape">
-                <img src="photos/landscapes/IMG_8679.jpg" alt="Landscape 2">
-            </div>
-            <div class="photo-card landscape">
                 <img src="photos/landscapes/blurryasfuck.jpg" alt="Landscape 3">
             </div>
 	    <div class="photo-card landscape">
@@ -119,17 +114,18 @@
     </section>
 
     <section id="videos">
-    <h2 class="section-title">Videos</h2>
-    <div class="gallery-grid">
-        <iframe 
-            width="420" 
-            height="315"
+    <div class="contact-container">
+	<h2 class="section-title">Videos</h2>
+        <p><iframe 
+            width="630" 
+            height="472.5"
             src="https://www.youtube.com/embed/WFXFSk2oi4Q" 
             title="Големата Вода - Има или Нема"
             frameborder="0"
             allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen>
-        </iframe>
+        </iframe></p>
+	<p class="video-legend">Shot on cassette tape with old sony camcorder in Prilep, North Macedonia.</p>
     </div>
 </section>
     
