--- a/index.html
+++ b/index.html
@@ -116,16 +116,18 @@
     <section id="videos">
     <div class="contact-container">
 	<h2 class="section-title">Videos</h2>
-        <p><iframe 
-            width="630" 
-            height="472.5"
-            src="https://www.youtube.com/embed/WFXFSk2oi4Q" 
-            title="Големата Вода - Има или Нема"
-            frameborder="0"
-            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen>
-        </iframe></p>
-	<p class="video-legend">Shot on cassette tape with old sony camcorder in Prilep, North Macedonia.</p>
+        <div class="video-wrapper">
+            <iframe 
+                width="630" 
+                height="472.5"
+                src="https://www.youtube.com/embed/WFXFSk2oi4Q" 
+                title="Големата Вода - Има или Нема"
+                frameborder="0"
+                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen>
+            </iframe>
+        </div>
+        <p class="video-legend">Shot on cassette tape with old sony camcorder in Prilep, North Macedonia.</p>
     </div>
 </section>
     
